app/styles/main.scss
// Brand Colors
$green: #00aa13;
$red: #ee2737;
$orange: #ffa000;
$pink: #df1995;
$blue: #00aed6;
$purple: #93328e;
$black: #2f2f2f;

// Font family
@font-face {
  font-family: "Maison Nueue";
  src: url("../fonts/MaisonNeueMono-Regular.otf") format("opentype");
}

@font-face {
  font-family: "Maison Nueue";
  font-weight: 600;
  src: url("../fonts/MaisonNeue-Bold.otf") format("opentype");
}

@font-face {
  font-family: "Maison Nueue";
  font-weight: 800;
  src: url("../fonts/MaisonNeueExtended-ExtraBold.otf") format("opentype");
}

// Font sizes
$font-xl: 3rem;
$font-l: 2.5rem;

$colors: (
  green: $green,
  red: $red,
  orange: $orange,
  pink: $pink,
  blue: $blue,
  purple: $purple
);

@mixin color-modifiers {
  @each $name, $hex in $colors {
    &-#{$name} {
      background-color: $hex;
    }
  }
}

.bg {
  @include color-modifiers;
}

body {
  font-family: "Maison Nueue";
  font-weight: 800;
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.full-height {
  min-height: 100vh;
}

.banner {
  &-head {
    font-size: $font-xl;
    font-weight: 800;
  }

  &-img {
    max-height: 500px;
  }
}

.header {
  font-size: $font-l;
  font-weight: 800;
}

